# appseccheat.codes

./: .dockerignore  .gitignore  .pre-commit-config.yaml  LICENSE  README.md  docker-compose.dev.yaml  docker-compose.yaml  eslint.config.js  mypy.ini  pyproject.toml  ruff.toml  run_tests.sh
.github/: dependabot.yml
.github/workflows/: pre-commit.yml
backend/: Dockerfile  constants.py  database.py  helper.py  local_file_adapter.py  local_flags.py  main.py  passphrases.py  pyproject.toml  requirements.txt
backend/functional_tests/: test.py
backend/patches/: __init__.py  sqli_login_bypass.py  sqli_second_order.py  ssrf_lfi.py  ssrf_webhook.py
exploits/: README.md  cli.py  run_all.py  sqli1.py  sqli2.py  sqli_login_bypass.py  sqli_second_order.py  ssrf_get_api_request.py  ssrf_lfi.py  ssrf_webhook.py
frontend/: .env.production  Dockerfile  challenge.html  docker-compose.yaml  faq.html  index.html  package-lock.json  package.json  sqli1.html  sqli1answer.html  sqli2.html  sqli2answer.html  ssrf1.html  ssrf1answer.html  ssrf2.html  ssrf2answer.html  tailwind.config.js  tailwind.css  test.html  test_again.html  vite.config.ts  wrangler.toml
internal_api/: Dockerfile  main.py  requirements.txt
learn-terraform-aws-instance/: main.tf
nginx/: Dockerfile  README.md  default.conf  nginx.conf
old_frontend/: Dockerfile  challenge.j2  layout.html  sqli1answer.html  ssrf1_challenge.html  ssrf2.html  ssrf2_card.html  tailwind.config.js
ssrf/: admin_panel.py
terraform/: .terraform.lock.hcl  main.tf  shared_versions.tf  terraform_init_all.sh  tf_init.sh  variables.tf
webapp/: Dockerfile  app.py  config.py  db.py  docker-compose.yaml  requirements.txt  schema.sql  sqli1.py  wsgi.py
(+292 files in other folders)
