[project]
name = "appseccheat-codes"
version = "2.0.0"
description = "Dev environment requirements for AppSec Cheat Codes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "mypy==1.13.0", # run mypy manually with `mypy .`
    "pre-commit==4.0.1", # run `pre-commit install` to install the hooks prior to committing
    "requests==2.32.3", # needed for functional tests
    "fastapi==0.115.4",
    "types-requests==2.32.0.20241016",
    "types-peewee==3.17.7.20241017",
    "bcrypt==4.2.0",
    "dnspython==2.7.0",
]
